namespace FunnyShooter.Runtime {
    public class AnimatorKey {
        public const string VelocityX = "VelocityX";
        public const string VelocityY = "VelocityY";
        public const string IsGround = "IsGround";
        public const string IsDeath = "IsDeath";
        public const string OnHit = "OnHit";
    }
}